<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="game_name">Tic Tac Toe</string>
    <string name="contentDescription">Image</string>
    <string name="playAgain">PLAY AGAIN</string>
    <string name="turnIndicator">0\'s turn</string>
    <string name="developerName">Developed By Hariharan</string>
    <string name="description">Tic Tac Toe is beginning level game</string>
</resources>