<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="27dp"
        android:gravity="center"
        android:text="@string/turnIndicator"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="430dp"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/game_grid_v2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="430sp"
        android:layout_marginTop="29dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/status">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="35sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ImageView0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/contentDescription"
                android:onClick="OnTapImage"
                android:padding="10sp"
                android:tag="0" />

            <ImageView
                android:id="@+id/ImageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10sp"
                android:onClick="OnTapImage"
                android:tag="1"
                android:contentDescription="@string/contentDescription" />

            <ImageView
                android:id="@+id/ImageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10sp"
                android:onClick="OnTapImage"
                android:tag="2"
                android:contentDescription="@string/contentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="20sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ImageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10sp"
                android:onClick="OnTapImage"
                android:tag="3"
                android:contentDescription="@string/contentDescription" />

            <ImageView
                android:id="@+id/ImageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10sp"
                android:onClick="OnTapImage"
                android:tag="4"
                android:contentDescription="@string/contentDescription" />

            <ImageView
                android:id="@+id/ImageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10sp"
                android:onClick="OnTapImage"
                android:tag="5"
                android:contentDescription="@string/contentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-15sp"
            android:layout_marginBottom="40sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ImageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10sp"
                android:onClick="OnTapImage"
                android:tag="6"
                android:contentDescription="@string/contentDescription" />
            <ImageView
                android:id="@+id/ImageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10sp"
                android:onClick="OnTapImage"
                android:tag="7"
                android:contentDescription="@string/contentDescription" />

            <ImageView
                android:id="@+id/ImageView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10sp"
                android:onClick="OnTapImage"
                android:tag="8"
                android:contentDescription="@string/contentDescription" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/playAgain_btn"
        android:layout_width="150sp"
        android:layout_height="60sp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="58dp"
        android:onClick="playAgain"
        android:text="@string/playAgain"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>